src/test/resources/valid_programs/comparison__with_bools.notc
void main() {
    printInt(false == false);
    printInt(false == true);
    printInt(true  == false);
    printInt(true  == true);

    printInt(false != false);
    printInt(false != true);
    printInt(true  != false);
    printInt(true  != true);
}
