src/test/resources/semantic_errors/redecl_different_stms_different_types.notc
void main() {
    int n;
    double m, n;
}
